tests/typing/pass/storageread0.act
contract Pass

constructor()

creates

	uint x := 0
	uint y := 2

transition f()

storage
	x := y
